# CPP-Starter-Template

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt
cmake/: FindGBenchmark.cmake  FindGTest.cmake  LTO.cmake  Packaging.cmake  Sanitizers.cmake
docs/: CMakeLists.txt
examples/: CMakeLists.txt
include/myproject/: ModuleA.h  ModuleB.h
src/: CMakeLists.txt
test/: CMakeLists.txt
